adding contact form and modifying css
modifying contact form using PHP to make it properly work, and changing
the portfolio section from the placeholder tag to make it more
understandable

--- a/styles/page.css
+++ b/styles/page.css
@@ -157,7 +157,7 @@ hr {
 
 /* Style for portfolio section */
 
-.placeholder {
+.portfolio-works {
   margin-bottom: 5%;
   box-shadow: 0 0 5px black;
 }
