--- a/styles/page.css
+++ b/styles/page.css
@@ -61,6 +61,7 @@ nav, footer {
 
 .navbar-light {
   background-color: #ddd;
+  opacity: 0.8;
 }
 
 .navbar-brand {
@@ -173,6 +174,7 @@ hr {
   width: 100%;
   height: 80px;
   background-color: #ddd;
+  opacity: 0.8;
 }
 
 .site-map {
