--- a/styles/page.css
+++ b/styles/page.css
@@ -10,7 +10,7 @@ h2,a {
 }
 
 .navbar a, .footer a {
-  color: black;
+  color: #ddd;
 }
 
 .page-header {
@@ -52,33 +52,49 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 nav, footer {
   padding-left: 10%;
   padding-right: 10%;
-  box-shadow: 0 0 10px black;
 }
 
-.navbar .active {
-  background-color: white;
-}
-
-.navbar-light {
-  background-color: #ddd;
-  opacity: 0.8;
-}
-
-.navbar-brand {
-  padding: 7px 15px;
-}
-
-.navbar-brand>img{
+.sidenav {
   height: 100%;
-  width: auto;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  &:a {
+    
+  }
 }
 
-.icon-bar {
-  background-color: black;
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
 }
 
-.navbar-toggle {
-  border-color: black;
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.nav-button {
+  font-size: 30px;
+  cursor: pointer;
+  color: #f1f1f1;
 }
 
 
@@ -95,15 +111,6 @@ hr {
   border-color: #ddd !important;
 }
 
-.expert {
-  margin-right: 50%;
-  color: #ddd;
-}
-
-.beginner {
-  color: #ddd;
-}
-
 .popover-title {
   background-color: #ddd;
 }
@@ -111,19 +118,6 @@ hr {
 .box {
   background: #ddd;
   height: 10px;
-}
-
-#design {
-  width: 53%;
-}
-
-#web {
-  width: 45%;
-}
-
-#python {
-  width: 20%;
-  text-align: left;
 }
 
 .home-link {
