--- a/styles/page.css
+++ b/styles/page.css
@@ -9,7 +9,7 @@ h2,a {
   color: #ddd;
 }
 
-.navbar a, .footer a {
+.footer a {
   color: #ddd;
 }
 
@@ -65,9 +65,6 @@ nav, footer {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  &:a {
-    
-  }
 }
 
 .sidenav a {
@@ -95,6 +92,7 @@ nav, footer {
   font-size: 30px;
   cursor: pointer;
   color: #f1f1f1;
+  margin-top: 2%;
 }
 
 
