--- a/styles/page.css
+++ b/styles/page.css
@@ -5,16 +5,21 @@ h1, h2, h3, h4, h5, h6, p, a, li, small, dt, dd {
   font-family: 'Poppins', sans-serif;
 }
 
-h2,a {
-  color: #ddd;
+h2 {
+  color: #dbf7fe;
 }
 
-.footer a {
+p, .about {
+  font-size: 120%;
+}
+
+a {
   color: #ddd;
+  font-size: 120%;
 }
 
 .page-header {
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #dbf7fe;
   margin-top: 10%;
   margin-bottom: 5%;
 }
@@ -30,6 +35,11 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   padding-left: 10%;
   padding-right: 10%;
   color: #ddd;
+} 
+
+.row {
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
 
 
@@ -101,23 +111,6 @@ nav, footer {
   margin: 0 auto;
 }
 
-hr {
-  margin-left: 42%;
-  text-align: right;
-  width: 55%;
-  border-width: 2px !important;
-  border-color: #ddd !important;
-}
-
-.popover-title {
-  background-color: #ddd;
-}
-
-.box {
-  background: #ddd;
-  height: 10px;
-}
-
 .home-link {
   margin-top: 10%;
   margin-bottom: 10%;
@@ -126,10 +119,6 @@ hr {
 
 
 /* Style for about section */
-.about-text {
-  padding-bottom: 2%;
-}
-
 .img-circle {
   margin-bottom: 3%;
 }
