--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,8 @@ nav {
   margin: 2% 1% 0; }
 
 .img-circle {
-  margin-bottom: 3%; }
+  margin-bottom: 3%;
+  width: 80%; }
 
 .projects-works {
   margin-bottom: 5%;
