--- a/styles/style.css
+++ b/styles/style.css
@@ -117,14 +117,9 @@ nav {
   bottom: 0;
   width: 100%;
   height: 80px;
-  background-color: #ddd;
+  background-color: #060d29;
+  padding-top: 1.5%;
+  padding-left: 5%;
   opacity: 0.8; }
-  .footer:p {
-    padding-top: 0.5%; }
-
-.site-map {
-  padding-top: 1.5%; }
-  .site-map:a {
-    margin-right: 5%; }
 
 /*# sourceMappingURL=style.css.map */
