--- a/styles/style.scss
+++ b/styles/style.scss
@@ -160,16 +160,8 @@ nav {
     bottom: 0;
     width: 100%;
     height: 80px;
-    background-color: $primary-color;
-    opacity: 0.8;
-    &:p {
-        padding-top: 0.5%;
-    }
-}
-
-.site-map {
+    background-color: #060d29;
     padding-top: 1.5%;
-    &:a {
-        margin-right: 5%;
-    }
+    padding-left: 5%;
+    opacity: 0.8;
 }
